src/test/ui/nll/issue-55825-const-fn.stderr
error[E0658]: trait objects in const fn are unstable
  --> $DIR/issue-55825-const-fn.rs:6:32
   |
LL | const fn no_dyn_trait_ret() -> &'static dyn std::fmt::Debug { &() }
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #93706 <https://github.com/rust-lang/rust/issues/93706> for more information
   = help: add `#![feature(const_fn_trait_bound)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
